# medify-ai-nexus

./: README.md  index.html
backend/: .env.example  Dockerfile  README.md  alembic.ini  docker-compose.yml  pyproject.toml
backend/alembic/: env.py
backend/app/: main.py
backend/app/api/v1/: api.py  deps.py
backend/app/api/v1/endpoints/: ai_feedback.py  analyses.py  analytics.py  auth.py  images.py  knowledge_base.py  notifications.py  patients.py  reports.py  users.py
backend/app/core/: config.py  logging.py  security.py
backend/app/crud/: base.py  crud_activity_log.py  crud_ai_feedback.py  crud_analysis.py  crud_image.py  crud_knowledge_base.py  crud_notification.py  crud_patient.py  crud_report.py  crud_user.py
backend/app/db/: base.py  base_class.py  init_db.py  session.py
backend/app/models/: activity_log.py  ai_feedback.py  analysis.py  image.py  knowledge_base.py  model_version.py  notification.py  patient.py  report.py  report_history.py  user.py
backend/app/schemas/: activity_log.py  ai_feedback.py  analysis.py  image.py  knowledge_base.py  notification.py  patient.py  report.py  token.py  user.py
backend/app/templates/: base.html  report.html
src/: App.tsx
src/components/auth/: PrivateRoute.tsx
src/components/layout/: Layout.tsx  Navbar.tsx  Sidebar.tsx
src/context/: AuthContext.tsx
src/lib/api/: auth.ts  config.ts  patients.ts
src/pages/: Dashboard.tsx  Login.tsx  PatientManagement.tsx
