
[tool.poetry]
name = "medify-ai-nexus"
version = "0.1.0"
description = "Medical system backend with FastAPI and PostgreSQL"
authors = ["Your Name <your.email@example.com>"]

[tool.poetry.dependencies]
python = "^3.9"
fastapi = "^0.103.1"
uvicorn = "^0.23.2"
pydantic = "^2.3.0"
sqlalchemy = "^2.0.20"
alembic = "^1.12.0"
psycopg2-binary = "^2.9.7"
python-jose = "^3.3.0"
passlib = "^1.7.4"
python-multipart = "^0.0.6"
pillow = "^10.0.0"
pydantic-settings = "^2.0.3"
pyotp = "^2.9.0"
qrcode = "^7.4.2"
reportlab = "^4.0.4"
jinja2 = "^3.1.2"
weasyprint = "^59.0"
python-dotenv = "^1.0.0"
email-validator = "^2.0.0"
aiofiles = "^23.2.1"

[tool.poetry.dev-dependencies]
pytest = "^7.4.0"
pytest-asyncio = "^0.21.1"
httpx = "^0.24.1"
black = "^23.7.0"
isort = "^5.12.0"
mypy = "^1.5.1"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
